add some routs for boards
